fix: enable logging. fix path to static files. fix layout problems in mobile navbar
Former-commit-id: 50432e8ab660054182e7be39ef0b75a0739fb71e

--- a/portfolio/portfolio_app/static/portfolio_app/output.css
+++ b/portfolio/portfolio_app/static/portfolio_app/output.css
@@ -1115,6 +1115,10 @@ html, dialog {
   height: 3rem
 }
 
+.h-14 {
+  height: 3.5rem
+}
+
 .h-16 {
   height: 4rem
 }
@@ -1143,12 +1147,12 @@ html, dialog {
   min-height: 100vh
 }
 
-.w-1\/3 {
-  width: 33.333333%
-}
-
 .w-12 {
   width: 3rem
+}
+
+.w-14 {
+  width: 3.5rem
 }
 
 .w-16 {
@@ -1245,12 +1249,6 @@ html, dialog {
   justify-content: space-around
 }
 
-.space-y-12 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(3rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(3rem * var(--tw-space-y-reverse))
-}
-
 .space-y-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
@@ -1263,10 +1261,10 @@ html, dialog {
   margin-bottom: calc(1rem * var(--tw-space-y-reverse))
 }
 
-.space-y-8 > :not([hidden]) ~ :not([hidden]) {
+.space-y-6 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
-  margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(2rem * var(--tw-space-y-reverse))
+  margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1.5rem * var(--tw-space-y-reverse))
 }
 
 .overflow-clip {
@@ -1315,12 +1313,20 @@ html, dialog {
   background-color: rgb(0 119 181 / var(--tw-bg-opacity))
 }
 
+.bg-action {
+  background-color: hsl(var(--action))
+}
+
 .bg-primary {
   background-color: hsl(var(--primary))
 }
 
 .bg-primary-700 {
   background-color: hsl(var(--primarydark))
+}
+
+.bg-primary-800 {
+  background-color: hsl(var(--primarydarkest))
 }
 
 .bg-transparent {
@@ -1467,6 +1473,11 @@ html, dialog {
   line-height: 2.25rem
 }
 
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem
+}
+
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem
@@ -1542,10 +1553,6 @@ html, dialog {
   border-bottom-left-radius: 0.375rem
 }
 
-.first-of-type\:hidden:first-of-type {
-  display: none
-}
-
 .hover\:cursor-help:hover {
   cursor: help
 }
@@ -1575,6 +1582,11 @@ html, dialog {
     position: sticky
   }
 
+  .md\:mx-0 {
+    margin-left: 0px;
+    margin-right: 0px
+  }
+
   .md\:ml-6 {
     margin-left: 1.5rem
   }
@@ -1587,8 +1599,16 @@ html, dialog {
     margin-top: 0px
   }
 
+  .md\:mr-0 {
+    margin-right: 0px
+  }
+
   .md\:block {
     display: block
+  }
+
+  .md\:inline-block {
+    display: inline-block
   }
 
   .md\:inline {
@@ -1597,6 +1617,10 @@ html, dialog {
 
   .md\:flex {
     display: flex
+  }
+
+  .md\:\!hidden {
+    display: none !important
   }
 
   .md\:hidden {
@@ -1633,6 +1657,11 @@ html, dialog {
 
   .md\:w-screen {
     width: 100vw
+  }
+
+  .md\:w-min {
+    width: -moz-min-content;
+    width: min-content
   }
 
   .md\:flex-row {
@@ -1685,6 +1714,14 @@ html, dialog {
     background-image: linear-gradient(to bottom, var(--tw-gradient-stops))
   }
 
+  .md\:bg-none {
+    background-image: none
+  }
+
+  .md\:p-0 {
+    padding: 0px
+  }
+
   .md\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem
@@ -1698,6 +1735,20 @@ html, dialog {
   .md\:text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem
+  }
+
+  .md\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem
+  }
+
+  .md\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem
+  }
+
+  .md\:hover\:pt-0:hover {
+    padding-top: 0px
   }
 }
 
